{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 829,
  "lineage": "349fa52b-b793-6237-4def-0079824f18d3",
  "resources": [
    {
      "module": "module.mysql-db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320123189943:security-group/sg-0fcccea213d11d1e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcccea213d11d1e1",
            "ingress": [],
            "name": "wordpress-db-20240410183531311100000001",
            "name_prefix": "wordpress-db-",
            "owner_id": "320123189943",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0354ec9a50bdd3562"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.mysql-db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-663469978",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d37bce40b94f8888",
            "security_group_rule_id": "sgr-066a6486ce1f0e22c",
            "self": false,
            "source_security_group_id": "sg-0fcccea213d11d1e1",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mysql-db.aws_security_group.wordpress_db",
            "module.wordpress-app.aws_security_group.allow_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.wordpress-app",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a751d933d3ab558",
            "domain": "vpc",
            "id": "eipalloc-08a751d933d3ab558",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-205-221-115.compute-1.amazonaws.com",
            "public_ip": "54.205.221.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.wordpress-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a699202e5027c10d",
            "arn": "arn:aws:ec2:us-east-1:320123189943:instance/i-0e31a5b452d8baf35",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e31a5b452d8baf35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "wordpress-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3c8e905fd13eac6",
            "private_dns": "ip-172-31-91-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.91.130",
            "public_dns": "ec2-44-211-133-140.compute-1.amazonaws.com",
            "public_ip": "44.211.133.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-012d40397427e8a01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh_http"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1736b46d2de03c0",
            "tags": {
              "Name": "wordpress-app-us-east-1"
            },
            "tags_all": {
              "Name": "wordpress-app-us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d37bce40b94f8888"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.mysql-db.aws_db_instance.wordpress_db",
            "module.mysql-db.aws_security_group.wordpress_db",
            "module.wordpress-app.aws_security_group.allow_ssh_http",
            "tls_private_key.pv_key"
          ]
        }
      ]
    },
    {
      "module": "module.wordpress-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:320123189943:security-group/sg-0d37bce40b94f8888",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d37bce40b94f8888",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "320123189943",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0354ec9a50bdd3562"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.wordpress-app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-440554032",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fcccea213d11d1e1",
            "security_group_rule_id": "sgr-073f88312b3a9b861",
            "self": false,
            "source_security_group_id": "sg-0d37bce40b94f8888",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mysql-db.aws_security_group.wordpress_db",
            "module.wordpress-app.aws_security_group.allow_ssh_http"
          ]
        }
      ]
    }
  ]
}